--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/download.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yeasins</title>
+    <title>Zubaer Jewel</title>
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
    
   </head>
