--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/download.png" />
+    <link rel="icon" type="image/svg+xml" href="https://i.ibb.co/kHJy20m/Zubaer-Hossain.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zubaer Jewel</title>
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
